<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    >

    <TextView
        android:id="@+id/text_view_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:text="@string/Title_second"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size2"

        app:layout_constraintBottom_toTopOf="@+id/name_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineShare1" />

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:fontFamily="monospace"
        android:text="@string/Result_email"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tel_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

    <TextView
        android:id="@+id/tel_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:fontFamily="monospace"
        android:text="@string/Result_telefono"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/action_share_implicit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_view" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginEnd3"
        android:fontFamily="monospace"
        android:text="@string/Name_second"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size2"
        app:layout_constraintBottom_toTopOf="@+id/email_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_share" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineShare1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="230dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineShare2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="230dp" />

    <Button
        android:id="@+id/action_share_implicit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_buttom"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="539dp"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guidelineShare2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tel_text_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>